Cleaned up, added footer if not added, fixed overflow, fixed links

--- a/Verkefni7/css/styles.css
+++ b/Verkefni7/css/styles.css
@@ -1,6 +1,7 @@
 body {
     max-width: 100%;
     overflow: hidden;
+    overflow-y: auto;
 }
 
 footer {
